--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "joi": "^17.12.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3"
   },
