--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.4.4",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "joi": "^17.12.1",
+    "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
